// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectObject Basic types 1`] = `
Object {
  "anys": "any[]",
  "fn": "(x: boolean) => number",
  "id": "<T>(x: T) => T",
  "record": "{ [x: number]: string; }",
  "str": "string",
}
`;

exports[`InspectObject Import 1`] = `
Object {
  "res": "<T extends Record<string, string>>(preamble: string, typeMap: T) => { [K in keyof T]: string; }",
}
`;

exports[`InspectObject Preamble 1`] = `
Object {
  "res": "number & string",
}
`;

exports[`InspectObject Self-reference 1`] = `
Object {
  "a": "string",
  "b": "string | Promise<string>",
}
`;
